Oops that's not the name of the org I made

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "private": true,
   "workspaces": [
     "types-demo",
-    "packages/core"
+    "packages/template"
   ],
   "scripts": {
     "lint": "yarn workspaces run lint",
     "test": "yarn workspace types-demo test",
-    "test:watch": "watchexec -e .ts yarn workspace types-demo test"
+    "test:watch": "watchexec -e .ts yarn test"
   },
   "volta": {
     "node": "12.16.2",
