--- a/types-demo/package.json
+++ b/types-demo/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "types": "index.d.ts",
   "devDependencies": {
-    "@gleam/core": "*",
+    "@glint/template": "*",
     "@glimmer/component": "^1.0.0",
     "@types/ember": "^3.1.2",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
