Lint and test cleanup

--- a/packages/transform/package.json
+++ b/packages/transform/package.json
@@ -6,7 +6,7 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "lint": "eslint . --ext ts --max-warnings 0 && prettier --check .",
+    "lint": "eslint . --ext ts --max-warnings 0 && prettier --check src",
     "test": "jest"
   },
   "dependencies": {
