--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
   ],
   "scripts": {
     "lint": "yarn workspaces run lint",
-    "test": "yarn workspace types-demo test",
-    "test:watch": "watchexec -e .ts yarn test"
+    "test": "yarn workspaces run test",
+    "build": "tsc --build"
   },
   "volta": {
     "node": "12.16.2",
     "yarn": "1.22.4"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "prettier": "^2.0.5",
+    "eslint": "^6.8.0"
   }
 }
