--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -8,7 +8,11 @@
     "composite": true,
     "outDir": "lib",
     "rootDir": "src",
-    "declaration": true
+    "declaration": true,
+    // Not ideal, but several of the @glimmer packages fairly consistently
+    // produce type errors across different versions.
+    "skipLibCheck": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "references": [{ "path": "../transform" }]
 }
