--- a/packages/template/tsconfig.json
+++ b/packages/template/tsconfig.json
@@ -6,7 +6,10 @@
     "esModuleInterop": true,
     "baseUrl": ".",
     "lib": ["dom"],
-    "composite": true
+    "composite": true,
+    // Not ideal, but several of the @glimmer packages fairly consistently
+    // produce type errors across different versions.
+    "skipLibCheck": true
   },
   "exclude": ["__tests__"]
 }
