--- a/packages/transform/tsconfig.json
+++ b/packages/transform/tsconfig.json
@@ -8,7 +8,10 @@
     "lib": ["dom"],
     "composite": true,
     "outDir": "lib",
-    "rootDir": "src"
+    "rootDir": "src",
+    // Not ideal, but several of the @glimmer packages fairly consistently
+    // produce type errors across different versions.
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
