--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
-    "prettier": "^2.0.5",
-    "eslint": "^6.8.0"
+    "eslint": "^6.8.0",
+    "prettier": "^2.0.5"
   }
 }
