--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -6,14 +6,14 @@
   "types": "index.d.ts",
   "scripts": {
     "lint": "eslint . --ext ts --max-warnings 0 && prettier --check .",
-    "test": "tsd __tests__"
+    "test": "tsc --project __tests__"
   },
   "devDependencies": {
     "@glimmer/component": "^1.0.0",
     "@glimmerx/component": "^0.2.2",
     "@types/ember__component": "~3.0.7",
+    "expect-type": "^0.7.4",
     "sums-up": "^2.1.0",
-    "tsd": "^0.11.0",
     "typescript": "^3.9.5"
   }
 }
