--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "private": true,
   "workspaces": [
-    "packages/cli",
-    "packages/template",
-    "packages/transform",
-    "packages/tsserver-plugin"
+    "packages/*",
+    "test-packages/*"
   ],
   "scripts": {
     "lint": "yarn workspaces run lint",
