--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "references": [
     { "path": "packages/cli" },
+    { "path": "packages/config" },
     { "path": "packages/template" },
     { "path": "packages/transform" },
     { "path": "packages/tsserver-plugin" }
