--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -14,5 +14,5 @@
     "skipLibCheck": true
   },
   "include": ["src"],
-  "references": [{ "path": "../transform" }]
+  "references": [{ "path": "../transform" }, { "path": "../config" }]
 }
