Clean up some package metadata

--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@glint/template",
   "version": "0.1.0",
+  "repository": "typed-ember/glint",
   "license": "MIT",
   "author": "Dan Freeman (https://github.com/dfreeman)",
   "types": "index.d.ts",
