--- a/packages/transform/package.json
+++ b/packages/transform/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@glint/transform",
   "version": "0.1.0",
+  "repository": "typed-ember/glint",
   "license": "MIT",
   "author": "Dan Freeman (https://github.com/dfreeman)",
   "main": "lib/index.js",
