--- a/packages/transform/package.json
+++ b/packages/transform/package.json
@@ -6,9 +6,15 @@
   "author": "Dan Freeman (https://github.com/dfreeman)",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "files": [
+    "README.md",
+    "lib"
+  ],
   "scripts": {
     "lint": "eslint . --ext ts --max-warnings 0 && prettier --check src",
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc --build",
+    "prepack": "yarn build"
   },
   "dependencies": {
     "@babel/core": "^7.9.0",
