--- a/packages/tsserver-plugin/package.json
+++ b/packages/tsserver-plugin/package.json
@@ -5,9 +5,16 @@
   "license": "MIT",
   "author": "Dan Freeman (https://github.com/dfreeman)",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "files": [
+    "README.md",
+    "lib"
+  ],
   "scripts": {
     "lint": "eslint . --ext ts --max-warnings 0 && prettier --check src",
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc --build",
+    "prepack": "yarn build"
   },
   "dependencies": {
     "@glint/config": "link:../config",
