--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
     "release-it": "^13.6.3",
     "release-it-lerna-changelog": "^2.3.0",
     "release-it-yarn-workspaces": "^1.4.0"
-  }
+  },
+  "version": "0.1.0"
 }
