Fix version constraints

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -19,8 +19,8 @@
     "prepack": "yarn build"
   },
   "dependencies": {
-    "@glint/config": "0.1.0",
-    "@glint/transform": "0.1.0",
+    "@glint/config": "^0.1.0",
+    "@glint/transform": "^0.1.0",
     "debug": "^4.1.1",
     "resolve": "^1.17.0",
     "yargs": "^15.3.1"
