--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -31,7 +31,6 @@
     "execa": "^4.0.1",
     "jest": "^25.2.1",
     "strip-ansi": "^6.0.0",
-    "ts-jest": "^25.5.1",
-    "typescript": "^3.9.5"
+    "ts-jest": "^25.5.1"
   }
 }
