--- a/packages/transform/package.json
+++ b/packages/transform/package.json
@@ -30,7 +30,6 @@
     "@types/jest": "^25.2.1",
     "common-tags": "^1.8.0",
     "jest": "^25.4.0",
-    "ts-jest": "^25.4.0",
-    "typescript": "^3.9.5"
+    "ts-jest": "^25.4.0"
   }
 }
