--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "prettier": "^2.0.5",
     "release-it": "^13.6.3",
     "release-it-lerna-changelog": "^2.3.0",
-    "release-it-yarn-workspaces": "^1.4.0"
+    "release-it-yarn-workspaces": "^1.4.0",
+    "typescript": "^3.9.5"
   },
   "version": "0.1.2"
 }
