--- a/packages/tsserver-plugin/package.json
+++ b/packages/tsserver-plugin/package.json
@@ -23,7 +23,6 @@
   "devDependencies": {
     "@types/jest": "^25.2.1",
     "jest": "^25.5.4",
-    "ts-jest": "^25.4.0",
-    "typescript": "^3.9.5"
+    "ts-jest": "^25.4.0"
   }
 }
