Simplify release-it config

--- a/.release-it.yml
+++ b/.release-it.yml
@@ -4,11 +4,5 @@ github:
   releaseName: 'v${version}'
   tokenRef: GITHUB_AUTH
 plugins:
-  release-it-yarn-workspaces:
-    workspaces:
-      - packages/config
-      - packages/template
-      - packages/transform
-      - packages/cli
-      - packages/tsserver-plugin
+  release-it-yarn-workspaces: true
   release-it-lerna-changelog: true
