Restructure breakdown of built-in values
Likely this is a precursor to a larger refactoring to introduce
something along the lines of "environments"

--- a/packages/template/tsconfig.json
+++ b/packages/template/tsconfig.json
@@ -6,7 +6,7 @@
     "esModuleInterop": true,
     "baseUrl": ".",
     "lib": ["dom"],
-    "composite": true,
+    "composite": true
     // Not ideal, but several of the @glimmer packages fairly consistently
     // produce type errors across different versions.
     "skipLibCheck": true
