--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     "prefer-const": "off",
     "@typescript-eslint/prefer-const": "off",
     "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/no-empty-interface": "off",
     "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/explicit-function-return-type": [
