--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -2,6 +2,7 @@
   "name": "@glint/config",
   "version": "0.1.2",
   "repository": "typed-ember/glint",
+  "description": "Tools to read configuration for @glint packages",
   "license": "MIT",
   "author": "Dan Freeman (https://github.com/dfreeman)",
   "main": "lib/index.js",
