--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -2,6 +2,7 @@
   "name": "@glint/template",
   "version": "0.1.2",
   "repository": "typed-ember/glint",
+  "description": "Type definitions to back typechecking for Glimmer templates",
   "license": "MIT",
   "author": "Dan Freeman (https://github.com/dfreeman)",
   "types": "index.d.ts",
