--- a/packages/transform/package.json
+++ b/packages/transform/package.json
@@ -2,6 +2,7 @@
   "name": "@glint/transform",
   "version": "0.1.2",
   "repository": "typed-ember/glint",
+  "description": "Transforms Glimmer templates into TypeScript code that approximates their semantics",
   "license": "MIT",
   "author": "Dan Freeman (https://github.com/dfreeman)",
   "main": "lib/index.js",
