--- a/packages/tsserver-plugin/package.json
+++ b/packages/tsserver-plugin/package.json
@@ -2,6 +2,7 @@
   "name": "@glint/tsserver-plugin",
   "version": "0.1.2",
   "repository": "typed-ember/glint",
+  "description": "A TypeScript language service plugin to provide typechecking and editor support for working with Glimmer templates",
   "license": "MIT",
   "author": "Dan Freeman (https://github.com/dfreeman)",
   "main": "lib/index.js",
