Drive CLI and tsserver-plugin transforms off of the configured environment

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
   ],
   "rules": {
     "prefer-const": "off",
+    "require-yield": "off",
     "@typescript-eslint/prefer-const": "off",
     "@typescript-eslint/no-empty-function": "off",
     "@typescript-eslint/no-empty-interface": "off",
