--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -19,7 +19,7 @@
     "@glimmer/component": "^1.0.0",
     "@glimmerx/component": "^0.2.2",
     "@types/ember__component": "~3.0.7",
-    "expect-type": "^0.7.4",
+    "expect-type": "0.7.3",
     "sums-up": "^2.1.0"
   }
 }
