Clean up project references

--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -13,6 +13,5 @@
     // produce type errors across different versions.
     "skipLibCheck": true
   },
-  "include": ["src"],
-  "references": [{ "path": "../transform" }]
+  "include": ["src"]
 }
