Set `publishConfig` for packages

--- a/packages/environment-glimmerx/package.json
+++ b/packages/environment-glimmerx/package.json
@@ -27,5 +27,8 @@
   "devDependencies": {
     "expect-type": "0.7.3",
     "@glimmerx/component": "^0.2.2"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
