--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,5 +33,8 @@
     "jest": "^25.2.1",
     "strip-ansi": "^6.0.0",
     "ts-jest": "^25.5.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
