--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -29,5 +29,8 @@
     "@types/resolve": "^1.17.1",
     "jest": "^25.4.0",
     "ts-jest": "^25.4.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
