--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -21,5 +21,8 @@
     "@types/ember__component": "~3.0.7",
     "expect-type": "0.7.3",
     "sums-up": "^2.1.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
