--- a/packages/transform/package.json
+++ b/packages/transform/package.json
@@ -33,5 +33,8 @@
     "common-tags": "^1.8.0",
     "jest": "^25.4.0",
     "ts-jest": "^25.4.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
