--- a/packages/tsserver-plugin/package.json
+++ b/packages/tsserver-plugin/package.json
@@ -25,5 +25,8 @@
     "@types/jest": "^25.2.1",
     "jest": "^25.5.4",
     "ts-jest": "^25.4.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
