Move to shared TS compiler options

--- a/packages/template/tsconfig.json
+++ b/packages/template/tsconfig.json
@@ -1,15 +1,4 @@
 {
-  "compilerOptions": {
-    "target": "es2019",
-    "module": "commonjs",
-    "strict": true,
-    "esModuleInterop": true,
-    "baseUrl": ".",
-    "lib": ["dom"],
-    "composite": true,
-    // Not ideal, but several of the @glimmer packages fairly consistently
-    // produce type errors across different versions.
-    "skipLibCheck": true
-  },
+  "extends": "../../tsconfig.compileroptions.json",
   "exclude": ["__tests__"]
 }
