--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,17 +1,8 @@
 {
+  "extends": "../../tsconfig.compileroptions.json",
   "compilerOptions": {
-    "target": "es2019",
-    "module": "commonjs",
-    "strict": true,
-    "esModuleInterop": true,
-    "baseUrl": ".",
-    "composite": true,
-    "outDir": "lib",
     "rootDir": "src",
-    "declaration": true,
-    // Not ideal, but several of the @glimmer packages fairly consistently
-    // produce type errors across different versions.
-    "skipLibCheck": true
+    "outDir": "lib"
   },
   "include": ["src"],
   "references": [{ "path": "../transform" }, { "path": "../config" }]
