--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -7,7 +7,7 @@
   "author": "Dan Freeman (https://github.com/dfreeman)",
   "types": "index.d.ts",
   "scripts": {
-    "lint": "eslint . --ext ts --max-warnings 0 && prettier --check .",
+    "lint": "eslint . --max-warnings 0 && prettier --check .",
     "test": "tsc --project __tests__"
   },
   "files": [
