--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,8 @@
     "@typescript-eslint/no-empty-interface": "off",
     "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/ban-types": "off",
+    "@typescript-eslint/no-var-requires": "off",
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       {
