--- a/packages/transform/package.json
+++ b/packages/transform/package.json
@@ -12,7 +12,7 @@
     "lib"
   ],
   "scripts": {
-    "lint": "eslint . --ext ts --max-warnings 0 && prettier --check src",
+    "lint": "eslint . --max-warnings 0 && prettier --check src",
     "test": "jest",
     "build": "tsc --build",
     "prepack": "yarn build"
