--- a/packages/environment-glimmerx/package.json
+++ b/packages/environment-glimmerx/package.json
@@ -25,8 +25,8 @@
     "@glint/template": "^0.2.1"
   },
   "devDependencies": {
-    "expect-type": "0.7.3",
-    "@glimmerx/component": "^0.2.2"
+    "@glimmerx/component": "^0.3.0",
+    "expect-type": "0.7.3"
   },
   "publishConfig": {
     "access": "public"
