--- a/packages/transform/package.json
+++ b/packages/transform/package.json
@@ -22,8 +22,7 @@
     "@babel/plugin-proposal-decorators": "7.10.5",
     "@babel/preset-typescript": "^7.10.4",
     "@glimmer/syntax": "^0.68.1",
-    "@glint/config": "^0.2.1",
-    "debug": "^4.1.1"
+    "@glint/config": "^0.2.1"
   },
   "devDependencies": {
     "@types/babel__core": "^7.1.7",
