--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@glint/cli",
+  "name": "@glint/core",
   "version": "0.2.1",
   "repository": "typed-ember/glint",
   "description": "A CLI for performing typechecking on Glimmer templates",
