--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "release-it": "^13.6.3",
     "release-it-lerna-changelog": "^2.3.0",
     "release-it-yarn-workspaces": "^1.4.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.3.0-dev.20210213"
   },
   "version": "0.2.1"
 }
