--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     { "path": "packages/environment-glimmerx" },
     { "path": "packages/template" },
     { "path": "packages/transform" },
-    { "path": "packages/tsserver-plugin" }
+    { "path": "packages/tsserver-plugin" },
+    { "path": "packages/vscode" }
   ],
   "files": []
 }
