--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,7 @@
     { "path": "packages/environment-ember-loose" },
     { "path": "packages/environment-glimmerx" },
     { "path": "packages/template" },
-    { "path": "packages/transform" },
-    { "path": "packages/tsserver-plugin" }
+    { "path": "packages/transform" }
   ],
   "files": []
 }
