Add the demo test-packages to the debug launch config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,11 @@
       "type": "extensionHost",
       "request": "launch",
       "runtimeExecutable": "${execPath}",
-      "args": ["--extensionDevelopmentPath=${workspaceFolder}/packages/vscode"]
+      "args": [
+        "--extensionDevelopmentPath=${workspaceFolder}/packages/vscode",
+        "${workspaceFolder}/test-packages/demo-ember-app",
+        "${workspaceFolder}/test-packages/demo-glimmerx-app"
+      ]
     }
   ]
 }
