--- a/packages/environment-ember-loose/tsconfig.json
+++ b/packages/environment-ember-loose/tsconfig.json
@@ -1,9 +1,5 @@
 {
   "extends": "../../tsconfig.compileroptions.json",
-  "compilerOptions": {
-    "outDir": "lib",
-    "rootDir": "src"
-  },
-  "include": ["src", "types"],
+  "exclude": ["__tests__"],
   "references": [{ "path": "../template" }, { "path": "../config" }]
 }
