--- a/packages/environment-glimmerx/package.json
+++ b/packages/environment-glimmerx/package.json
@@ -5,8 +5,7 @@
   "description": "A Glint environment to support GlimmerX projects",
   "license": "MIT",
   "author": "Dan Freeman (https://github.com/dfreeman)",
-  "main": "lib/index.js",
-  "glint-environment": "lib/environment.js",
+  "glint-environment": "environment/index.js",
   "keywords": [
     "glint-environment"
   ],
@@ -18,8 +17,11 @@
   },
   "files": [
     "README.md",
-    "lib/",
-    "types/"
+    "types/**/*.{js,d.ts}",
+    "environment/**/*.{js,d.ts}",
+    "modifier/**/*.{js,d.ts}",
+    "helper/**/*.{js,d.ts}",
+    "component/**/*.{js,d.ts}"
   ],
   "dependencies": {
     "@glint/config": "^0.2.1",
