--- a/packages/environment-glimmerx/package.json
+++ b/packages/environment-glimmerx/package.json
@@ -10,7 +10,7 @@
     "glint-environment"
   ],
   "scripts": {
-    "lint": "eslint . --max-warnings 0 && prettier --check src",
+    "lint": "eslint . --max-warnings 0 && prettier --check .",
     "test": "tsc --project __tests__",
     "build": "tsc --build",
     "prepack": "yarn build"
