Prepare VSCode extension for publication

--- a/packages/vscode/.vscodeignore
+++ b/packages/vscode/.vscodeignore
@@ -1,4 +1,16 @@
-.vscode/**
 .gitignore
-**/*.map
-**/.eslintrc.json
+.eslintignore
+
+.vscode/
+.vscode-test/
+
+__tests__/
+__fixtures__/
+src/
+
+tsconfig.json
+tsconfig.tsbuildinfo
+
+jest.config.js
+
+node_modules/**/*.d.ts
