Adding an untyped GlimmerX project to develop the GlimmerX language server against

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
       "args": [
         "--extensionDevelopmentPath=${workspaceFolder}/packages/vscode",
         "${workspaceFolder}/test-packages/demo-ember-app",
-        "${workspaceFolder}/test-packages/demo-glimmerx-app"
+        "${workspaceFolder}/test-packages/demo-glimmerx-app",
+        "${workspaceFolder}/test-packages/demo-untyped-glimmerx-app"
       ]
     }
   ]
