build before launch in Debug Extension

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,7 @@
       "name": "Debug Extension",
       "type": "pwa-extensionHost",
       "request": "launch",
+      "preLaunchTask": "npm: build",
       "autoAttachChildProcesses": true,
       "runtimeExecutable": "${execPath}",
       "args": [
