--- a/tsconfig.compileroptions.json
+++ b/tsconfig.compileroptions.json
@@ -5,6 +5,7 @@
     "moduleResolution": "node",
     "strict": true,
     "noImplicitOverride": true,
+    "noPropertyAccessFromIndexSignature": true,
     "esModuleInterop": true,
     "composite": true,
     "declaration": true,
