--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,10 @@ on:
     tags:
       - '*'
 
+  # early issue detection: run CI weekly on Sundays
+  schedule:
+    - cron: '0 6 * * 0'
+
 env:
   CI: true
 
