--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,27 @@ jobs:
       - name: Run Tests
         run: yarn test
 
-  test-versions:
+  test-floating-deps:
+    name: Test Floating Dependencies
+    needs: [test]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+      - name: Install Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - name: Install Dependencies
+        run: yarn install --no-lockfile
+      - name: Build
+        run: yarn build
+      - name: Run Tests
+        uses: GabrielBB/xvfb-action@v1
+        with:
+          run: yarn test
+
+  test-ts-nightly:
     name: Test TypeScript Nightly
     needs: [test]
     runs-on: ubuntu-latest
