--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,6 +24,7 @@
     "@glint/config": "^0.6.3",
     "@glint/transform": "^0.6.3",
     "resolve": "^1.17.0",
+    "uuid": "^8.3.2",
     "vscode-languageserver": "^7.0.0",
     "vscode-languageserver-textdocument": "^1.0.1",
     "vscode-uri": "^3.0.2",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.13",
     "@types/resolve": "^1.17.1",
+    "@types/uuid": "^8.3.4",
     "execa": "^4.0.1",
     "jest": "^26.4.2",
     "strip-ansi": "^6.0.0",
