--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,7 @@
       "runtimeExecutable": "${execPath}",
       "args": [
         "--extensionDevelopmentPath=${workspaceFolder}/packages/vscode",
-        "${workspaceFolder}/test-packages/ts-ember-app",
-        "${workspaceFolder}/test-packages/ts-glimmerx-app",
-        "${workspaceFolder}/test-packages/js-glimmerx-app"
+        "${workspaceFolder}/test-packages/glint-test-packages.code-workspace"
       ]
     }
   ]
