--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,7 @@ on:
   push:
     # filtering branches here prevents duplicate builds from pull_request and push
     branches:
-      - master
-      - 'v*'
+      - main
     # always run CI for tags
     tags:
       - '*'
