Use `SilentError` when no config is found
Throwing a regular error gave an IMO confusing error message, with the full stack trace etc.

--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -21,7 +21,8 @@
     "cosmiconfig": "^6.0.0",
     "escape-string-regexp": "^4.0.0",
     "minimatch": "^3.0.4",
-    "resolve": "^1.17.0"
+    "resolve": "^1.17.0",
+    "silent-error": "^1.1.1"
   },
   "devDependencies": {
     "@types/jest": "^26.0.13",
