--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     { "path": "packages/config" },
     { "path": "packages/core" },
     { "path": "packages/environment-ember-loose" },
+    { "path": "packages/environment-ember-template-imports" },
     { "path": "packages/environment-glimmerx" },
     { "path": "packages/template" },
     { "path": "packages/transform" },
