Declare correct peerDependencies for augmented packages

--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -15,6 +15,9 @@
     "-private",
     "*.d.ts"
   ],
+  "peerDependencies": {
+    "@glimmer/component": "^1.1.2"
+  },
   "devDependencies": {
     "@glimmer/component": "^1.1.2",
     "@glimmerx/component": "^0.4.2",
