--- a/packages/environment-ember-loose/package.json
+++ b/packages/environment-ember-loose/package.json
@@ -26,6 +26,11 @@
     "@glint/config": "^0.7.5",
     "@glint/template": "^0.7.5"
   },
+  "peerDependencies": {
+    "@glimmer/component": "^1.1.2",
+    "ember-cli-htmlbars": "^6.0.1",
+    "ember-modifier": "^3.2.7"
+  },
   "devDependencies": {
     "@glimmer/component": "^1.1.2",
     "@types/ember__component": "~4.0.8",
