--- a/packages/environment-ember-template-imports/package.json
+++ b/packages/environment-ember-template-imports/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "lint": "eslint . --max-warnings 0 && prettier --check .",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "build": "tsc --build",
     "prepack": "yarn build"
   },
