Mark `environment-glimmerx` temporarily private to avoid publishing

--- a/packages/environment-glimmerx/package.json
+++ b/packages/environment-glimmerx/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@glint/environment-glimmerx",
   "version": "0.7.5",
+  "private": true,
   "repository": "typed-ember/glint",
   "description": "A Glint environment to support GlimmerX projects",
   "license": "MIT",
