--- a/packages/environment-ember-template-imports/tsconfig.json
+++ b/packages/environment-ember-template-imports/tsconfig.json
@@ -1,15 +1,9 @@
 {
   "extends": "../../tsconfig.compileroptions.json",
-  "compilerOptions": {
-    "outDir": "lib",
-    "rootDir": "src"
-  },
-  "include": ["src"],
+  "exclude": ["__tests__"],
   "references": [
     { "path": "../environment-ember-loose" },
     { "path": "../config" },
-    { "path": "../core" },
-    { "path": "../template" },
-    { "path": "../transform" }
+    { "path": "../template" }
   ]
 }
