--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -1,65 +1,71 @@
 {
-  "name": "glint-vscode",
-  "displayName": "Glint",
-  "description": "Glint language server integration for VS Code",
-  "version": "0.8.2",
-  "publisher": "typed-ember",
-  "preview": true,
-  "private": true,
-  "author": "James C. Davis (https://github.com/jamescdavis)",
-  "license": "MIT",
-  "main": "lib/extension.js",
-  "homepage": "https://github.com/typed-ember/glint/packages/vscode",
-  "repository": {
-    "url": "https://github.com/typed-ember/glint"
-  },
-  "keywords": [
-    "ember",
-    "glimmer",
-    "handlebars",
-    "typescript"
-  ],
-  "categories": [
-    "Programming Languages",
-    "Linters"
-  ],
-  "files": [
-    "README.md",
-    "lib"
-  ],
-  "scripts": {
-    "lint": "eslint . --max-warnings 0 && prettier --check src",
-    "test": "node __tests__/support/launch-from-cli.js",
-    "build": "tsc --build",
-    "vscode:prepublish": "yarn build"
-  },
-  "engines": {
-    "vscode": "^1.52.0"
-  },
-  "activationEvents": [
-    "workspaceContains:.glintrc*"
-  ],
-  "icon": "assets/glint.png",
-  "galleryBanner": {
-    "color": "#1E293B",
-    "theme": "dark"
-  },
-  "workspaces": {
-    "nohoist": [
-      "**/*"
-    ]
-  },
-  "dependencies": {
-    "resolve": "^1.20.0",
-    "vscode-languageclient": "^7.0.0"
-  },
-  "devDependencies": {
-    "@glint/core": "^0.8.2",
-    "@types/jest": "^26.0.13",
-    "@types/vscode": "^1.52.0",
-    "intercept-stdout": "^0.1.2",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.3.0",
-    "vscode-test": "^1.5.1"
-  }
+	"name": "glint-vscode",
+	"displayName": "Glint",
+	"description": "Glint language server integration for VS Code",
+	"version": "0.8.2",
+	"publisher": "typed-ember",
+	"preview": true,
+	"private": true,
+	"author": "James C. Davis (https://github.com/jamescdavis)",
+	"license": "MIT",
+	"main": "lib/extension.js",
+	"homepage": "https://github.com/typed-ember/glint/packages/vscode",
+	"repository": {
+		"url": "https://github.com/typed-ember/glint"
+	},
+	"keywords": [
+		"ember",
+		"glimmer",
+		"handlebars",
+		"typescript"
+	],
+	"categories": [
+		"Programming Languages",
+		"Linters"
+	],
+	"files": [
+		"README.md",
+		"lib"
+	],
+	"scripts": {
+		"lint": "eslint . --max-warnings 0 && prettier --check src",
+		"test": "node __tests__/support/launch-from-cli.js",
+		"build": "tsc --build",
+		"vscode:prepublish": "yarn build"
+	},
+	"engines": {
+		"vscode": "^1.52.0"
+	},
+	"activationEvents": [
+		"workspaceContains:.glintrc*"
+	],
+	"icon": "assets/glint.png",
+	"galleryBanner": {
+		"color": "#1E293B",
+		"theme": "dark"
+	},
+	"workspaces": {
+		"nohoist": [
+			"**/*"
+		]
+	},
+	"dependencies": {
+		"resolve": "^1.20.0",
+		"vscode-languageclient": "^7.0.0"
+	},
+	"devDependencies": {
+		"@glint/core": "^0.8.2",
+		"@types/jest": "^26.0.13",
+		"@types/vscode": "^1.52.0",
+		"intercept-stdout": "^0.1.2",
+		"jest": "^26.4.2",
+		"ts-jest": "^26.3.0",
+		"vscode-test": "^1.5.1"
+	},
+	"__metadata": {
+		"id": "f1370239-cb1d-475c-b9da-20961224a998",
+		"publisherDisplayName": "typed-ember",
+		"publisherId": "b79e9b30-918d-42b5-9460-27287aca13c4",
+		"isPreReleaseVersion": false
+	}
 }
