--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -37,7 +37,8 @@
   "vscode": "^1.52.0"
  },
  "activationEvents": [
-  "workspaceContains:.glintrc*"
+  "workspaceContains:**/tsconfig.json",
+  "workspaceContains:**/jsconfig.json"
  ],
  "icon": "assets/glint.png",
  "galleryBanner": {
