Migrate config in fixtures and test packages

--- a/packages/vscode/__fixtures__/ember-app/tsconfig.json
+++ b/packages/vscode/__fixtures__/ember-app/tsconfig.json
@@ -5,5 +5,8 @@
     "module": "es2015",
     "moduleResolution": "node",
     "skipLibCheck": true
+  },
+  "glint": {
+    "environment": "ember-loose"
   }
 }
