--- a/packages/vscode/__fixtures__/js-glimmerx-app/jsconfig.json
+++ b/packages/vscode/__fixtures__/js-glimmerx-app/jsconfig.json
@@ -5,5 +5,8 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "checkJs": true
+  },
+  "glint": {
+    "environment": "glimmerx"
   }
 }
