--- a/packages/vscode/__fixtures__/template-imports-app/tsconfig.json
+++ b/packages/vscode/__fixtures__/template-imports-app/tsconfig.json
@@ -1,3 +1,6 @@
 {
-  "extends": "../../../../tsconfig.compileroptions.json"
+  "extends": "../../../../tsconfig.compileroptions.json",
+  "glint": {
+    "environment": ["ember-loose", "ember-template-imports"]
+  }
 }
