Add a command to restart just the Glint server

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -41,6 +41,12 @@
     "workspaceContains:**/jsconfig.json"
   ],
   "contributes": {
+    "commands": [
+      {
+        "title": "Glint: Restart Glint Server",
+        "command": "glint.restart-language-server"
+      }
+    ],
     "configuration": [
       {
         "title": "Glint",
