Add an editor command for showing module IR

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -45,12 +45,22 @@
       {
         "title": "Glint: Restart Glint Server",
         "command": "glint.restart-language-server"
+      },
+      {
+        "title": "Glint: Show IR for Debugging",
+        "command": "glint.show-debug-ir",
+        "enablement": "config.glint.debug == true"
       }
     ],
     "configuration": [
       {
         "title": "Glint",
         "properties": {
+          "glint.debug": {
+            "description": "Enable debugging commands for Glint.",
+            "type": "boolean",
+            "default": false
+          },
           "glint.trace.server": {
             "description": "Traces communication between VS Code and the Glint language server.",
             "type": "string",
