--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     { "path": "packages/environment-glimmerx" },
     { "path": "packages/template" },
     { "path": "packages/transform" },
+    { "path": "packages/tsserver-plugin" },
     { "path": "packages/vscode" }
   ],
   "files": []
