--- a/packages/vscode/tsconfig.json
+++ b/packages/vscode/tsconfig.json
@@ -5,5 +5,5 @@
     "outDir": "lib"
   },
   "include": ["src"],
-  "references": [{ "path": "../config" }]
+  "references": [{ "path": "../config" }, { "path": "../core" }]
 }
