Fix tsconfig to unblock scripts
- set `moduleResolution` to `Node16` in `tsconfig.compilerOptions.json`
- correctly specify the workspace dependency on `config` in `scripts`

--- a/packages/scripts/tsconfig.json
+++ b/packages/scripts/tsconfig.json
@@ -6,6 +6,6 @@
     "module": "Node16",
     "moduleResolution": "Node16"
   },
-  "include": ["src"]
-  // "references": [{ "path": "../transform" }, { "path": "../config" }]
+  "include": ["src"],
+  "references": [{ "path": "../config" }]
 }
