Make sure `@types/yargs` is hoisted in `scripts`

--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -42,5 +42,10 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "workspaces": {
+    "nohoist": [
+      "@types/yargs"
+    ]
   }
 }
