--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,7 +16,8 @@
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0 && prettier --check src",
-    "test": "jest",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
     "build": "tsc --build",
     "prepack": "yarn build"
   },
@@ -31,13 +32,12 @@
     "yargs": "^15.3.1"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.13",
     "@types/resolve": "^1.17.1",
     "@types/uuid": "^8.3.4",
+    "@types/yargs": "^15.0.0",
     "execa": "^4.0.1",
-    "jest": "^26.4.2",
     "strip-ansi": "^6.0.0",
-    "ts-jest": "^26.3.0"
+    "vitest": "^0.18.1"
   },
   "publishConfig": {
     "access": "public"
