--- a/packages/environment-ember-loose/tsconfig.json
+++ b/packages/environment-ember-loose/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "../../tsconfig.compileroptions.json",
-  "exclude": ["__tests__"],
+  "include": ["registry", "-private"],
   "references": [{ "path": "../template" }, { "path": "../config" }]
 }
