--- a/packages/environment-ember-template-imports/tsconfig.json
+++ b/packages/environment-ember-template-imports/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../tsconfig.compileroptions.json",
-  "exclude": ["__tests__"],
+  "include": ["-private"],
   "references": [
     { "path": "../environment-ember-loose" },
     { "path": "../config" },
