--- a/packages/environment-ember-template-imports/package.json
+++ b/packages/environment-ember-template-imports/package.json
@@ -13,7 +13,8 @@
   ],
   "scripts": {
     "lint": "eslint . --max-warnings 0 && prettier --check .",
-    "test": "jest",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
     "build": "tsc --build",
     "prepack": "yarn build"
   },
@@ -33,7 +34,7 @@
     "@types/ember__helper": "^4.0.0",
     "@types/ember__modifier": "^4.0.0",
     "ember-template-imports": "^3.0.0",
-    "expect-type": "0.11.0"
+    "vitest": "^0.18.1"
   },
   "publishConfig": {
     "access": "public"
