Upgrade `yargs` to avoid type conflicts in floating dep tests

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
+    "@types/yargs": "^17.0.10",
     "eslint": "^7.15.0",
     "prettier": "^2.1.1",
     "release-it": "^14.4.1",
