Run linting from the root instead of per-project so it's faster

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test-packages/*"
   ],
   "scripts": {
-    "lint": "yarn workspaces run lint",
+    "lint": "yarn lint:scripts && yarn lint:formatting",
+    "lint:scripts": "yarn eslint --max-warnings 0 --cache .",
+    "lint:formatting": "yarn prettier --check .",
     "test": "yarn workspaces run test",
     "build": "tsc --build",
     "release-it": "echo \"Running release-it via yarn breaks publishing! Use npx or a Volta global installation.\""
