--- a/packages/vscode/__fixtures__/js-glimmerx-app/.eslintrc
+++ b/packages/vscode/__fixtures__/js-glimmerx-app/.eslintrc
@@ -6,9 +6,7 @@
   "env": {
     "browser": true
   },
-  "plugins": [
-    "@glimmerx"
-  ],
+  "plugins": ["@glimmerx"],
   "rules": {
     "@glimmerx/template-vars": "error"
   }
